--- a/git/index.html
+++ b/git/index.html
@@ -26,7 +26,7 @@
           <div class="row">
             <div class="col-12">
               <div class="card shadow-lg p-4" style="background-image: url('royal-doulton.avif');">
-                <div class="col-3 col-md-3 col-sm-3 me-5 text-center">
+                <div class="col-3 col-md-3 col-sm-3 text-center">
                   <label for="photo-upload"></label>
                   <input type="file" id="photo-upload" accept="image/*" class="mt-4 ms-2"><br><br>
                 </div>
